# color-banner

./: .gitignore  .not-readable-by-me.txt.swp  CHANGELOG.md  CREDITS.md  LICENSE  Makefile  NOTICE  README.md  not-readable-by-me.txt  pyproject.toml  run-me.sh  splash.sh
examples/: example-big_money.txt  example-delta_corps_priest.txt  example-dos_rebel.txt  example-ogre.txt
output-check/: 001-1943____.ans  002-1row.ans  003-3-d.ans  004-3d-ascii.ans  005-3d_diagonal.ans  006-3x5.ans  007-4max.ans  008-4x4_offr.ans  009-5lineoblique.ans  010-5x7.ans  011-5x8.ans  012-64f1____.ans  013-6x10.ans  014-6x9.ans  015-a_zooloo.ans  016-acrobatic.ans  017-advenger.ans  018-alligator.ans  019-alligator2.ans  020-alpha.ans  021-alphabet.ans  022-amc_3_line.ans  023-amc_3_liv1.ans  024-amc_aaa01.ans  025-amc_neko.ans  026-amc_razor.ans  027-amc_razor2.ans  028-amc_slash.ans  029-amc_slider.ans  030-amc_thin.ans  031-amc_tubes.ans  032-amc_untitled.ans  033-ansi_regular.ans  034-ansi_shadow.ans  035-aquaplan.ans  036-arrows.ans  037-asc_____.ans  038-ascii12.ans  039-ascii9.ans  040-ascii___.ans  (+531 more)
preview-caps/: 001-1943____.ans  003-3-d.ans  006-3x5.ans  007-4max.ans  008-4x4_offr.ans  009-5lineoblique.ans  010-5x7.ans  011-5x8.ans  012-64f1____.ans  013-6x10.ans  014-6x9.ans  015-a_zooloo.ans  016-acrobatic.ans  017-advenger.ans  021-alphabet.ans  025-amc_neko.ans  028-amc_slash.ans  029-amc_slider.ans  030-amc_thin.ans  032-amc_untitled.ans  034-ansi_shadow.ans  035-aquaplan.ans  036-arrows.ans  037-asc_____.ans  038-ascii12.ans  039-ascii9.ans  040-ascii___.ans  041-ascii_new_roman.ans  042-assalt_m.ans  043-asslt__m.ans  044-atc_____.ans  045-atc_gran.ans  046-avatar.ans  048-b_m__200.ans  049-banner.ans  052-banner4.ans  053-barbwire.ans  055-battle_s.ans  056-battlesh.ans  057-baz__bil.ans  (+408 more)
preview-lower/: 001-1943____.ans  003-3-d.ans  004-3d-ascii.ans  006-3x5.ans  008-4x4_offr.ans  009-5lineoblique.ans  010-5x7.ans  011-5x8.ans  012-64f1____.ans  013-6x10.ans  014-6x9.ans  015-a_zooloo.ans  016-acrobatic.ans  (+440 more)
(+479 files in other folders)
