[project]
name = "color-banner"
version = "0.3.1"
description = "Colorful figlet ASCII banners for terminals, CICD pipelines, and shell splash screens"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yazz Atlas", email = "entropyworks@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "pyfiglet>=1.0.2",
]

[project.urls]
Homepage = "https://github.com/EntropyWorks/color-banner"
Repository = "https://github.com/EntropyWorks/color-banner"
Issues = "https://github.com/EntropyWorks/color-banner/issues"

[project.scripts]
color-banner = "color_banner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/color_banner"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
